--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
@@ -18,7 +18,7 @@
           "count": 1
         }
       },
-      "displayName": "Too Few Available Projects",
+      "displayName": "Too Few Available Projects"
     },
     {
       "conditionThreshold": {
