--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_failure_billing_project_garbage_collection.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_failure_billing_project_garbage_collection.json
@@ -16,7 +16,7 @@
           "percent": 100
         }
       },
-      "displayName": "billingProjectGarbageCollection Cron Signal Absent",
+      "displayName": "billingProjectGarbageCollection Cron Signal Absent"
     }
   ],
   "displayName": "Cron Failure: Billing Project Garbage Collection",
