--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_faliure_audit_project_access.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_faliure_audit_project_access.json
@@ -16,7 +16,7 @@
           "percent": 100
         }
       },
-      "displayName": "checkClusters failed",
+      "displayName": "checkClusters failed"
     }
   ],
   "displayName": "Cron Failure: Check Clusters",
