--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
@@ -41,7 +41,7 @@
           "count": 1
         }
       },
-      "displayName": "Error Count Rises Too Fast",
+      "displayName": "Error Count Rises Too Fast"
     }
   ],
   "displayName": "Billing Buffer Health",
