--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_faliure_audit_project_access.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_faliure_audit_project_access.json
@@ -28,5 +28,8 @@
   "enabled": false,
   "notificationChannels": [
     "projects/${project_id}/notificationChannels/${notification_channel_id}"
-  ]
+  ],
+  "userLabels": {
+    "type": "cron_failure"
+  }
 }
