--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_failure_billing_project_garbage_collection.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/cron_failure_billing_project_garbage_collection.json
@@ -11,7 +11,7 @@
           }
         ],
         "duration": "10800s",
-        "filter": "metric.type=\"logging.googleapis.com/user/cron_job_completion\" resource.type=\"gae_app\"\nmetric.label.\"name\"=\"billingProjectGarbageCollection\" metric.label.\"status\"=\"204\"",
+        "filter": "metric.type=\"logging.googleapis.com/user/cron_job_completion\" resource.type=\"gae_app\" metric.label.\"name\"=\"billingProjectGarbageCollection\" metric.label.\"status\"=\"204\"",
         "trigger": {
           "percent": 100
         }
