--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
@@ -51,6 +51,6 @@
   },
   "enabled": true,
   "notificationChannels": [
-    "projects/${project_id}/notificationChannels/${notification_channel_id}"
+    "projects/${project_id}/notificationChannels/${high_priority_notification_channel_id}"
   ]
 }
