--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
@@ -12,13 +12,32 @@
         ],
         "comparison": "COMPARISON_LT",
         "duration": "60s",
-        "filter": "metric.type=\"custom.googleapis.com/billing_buffer_project_count\" resource.type=\"generic_node\" resource.label.\"namespace\"=\"${namespace}\" metric.label.\"BufferEntryStatus\"=\"AVAILABLE\"",
+        "filter": "metric.type=\"custom.googleapis.com/billing_buffer_project_count_3\" resource.type=\"generic_node\" resource.label.\"namespace\"=\"${namespace}\" metric.label.\"BufferEntryStatus\"=\"AVAILABLE\" metric.label.\"access_tier_short_name\"=\"registered\"",
         "thresholdValue": 25,
         "trigger": {
           "count": 1
         }
       },
-      "displayName": "Too Few Available Projects"
+      "displayName": "Too Few Available Registered Tier Projects"
+    },
+    {
+      "conditionThreshold": {
+        "aggregations": [
+          {
+            "alignmentPeriod": "60s",
+            "crossSeriesReducer": "REDUCE_MEAN",
+            "perSeriesAligner": "ALIGN_MEAN"
+          }
+        ],
+        "comparison": "COMPARISON_LT",
+        "duration": "60s",
+        "filter": "metric.type=\"custom.googleapis.com/billing_buffer_project_count_3\" resource.type=\"generic_node\" resource.label.\"namespace\"=\"${namespace}\" metric.label.\"BufferEntryStatus\"=\"AVAILABLE\" metric.label.\"access_tier_short_name\"=\"controlled\"",
+        "thresholdValue": 25,
+        "trigger": {
+          "count": 1
+        }
+      },
+      "displayName": "Too Few Available Controlled Tier Projects"
     },
     {
       "conditionThreshold": {
@@ -35,7 +54,7 @@
         ],
         "comparison": "COMPARISON_GT",
         "duration": "0s",
-        "filter": "metric.type=\"custom.googleapis.com/billing_buffer_project_count\" resource.type=\"generic_node\" resource.label.\"namespace\"=\"${namespace}\" metric.label.\"BufferEntryStatus\"=\"ERROR\"",
+        "filter": "metric.type=\"custom.googleapis.com/billing_buffer_project_count_3\" resource.type=\"generic_node\" resource.label.\"namespace\"=\"${namespace}\" metric.label.\"BufferEntryStatus\"=\"ERROR\"",
         "thresholdValue": 5,
         "trigger": {
           "count": 1
