disable billing buffer alert

--- a/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
+++ b/modules/workbench/modules/monitoring/modules/alert_policies/assets/alert_policies/too_few_projects.json
@@ -68,7 +68,7 @@
     "content": "Playbook: https://broad.io/aou-playbook",
     "mimeType": "text/markdown"
   },
-  "enabled": true,
+  "enabled": false,
   "notificationChannels": [
     "projects/${project_id}/notificationChannels/${high_priority_notification_channel_id}"
   ]
